string methods and print formates

--- a/01-python bootcamp/tutorials/STRING.IPYNB
+++ b/01-python bootcamp/tutorials/STRING.IPYNB
@@ -9,6 +9,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8ffb0eb",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "618fdadb",
@@ -554,6 +560,94 @@
    "source": [
     "x.upper()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78b389d1",
+   "metadata": {},
+   "source": [
+    "print formatting "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f5443b02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a string inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('this is a string {}'.format('inserted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "874d4987",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the fox brown quick\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('the {} {} {}'.format('fox' , 'brown' , 'quick') )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b93653ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the quick brown fox\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('the {2} {1} {0}'.format('fox' , 'brown' , 'quick') )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "18199c29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the fox quick brown\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('the {a} {b} {c}'.format(a='fox' ,c= 'brown' ,b= 'quick') )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e635a678",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
